--- a/config/config.yml
+++ b/config/config.yml
@@ -1,10 +1,10 @@
 ---
-title:               Obtvse Demo
-tagline:             Clever tagline.
+title:               Seongsiks
+tagline:             Being A Developer.
 login:               <%= ENV["obtvse_login"] ? ENV["obtvse_login"] : "username" %>
 password:            <%= ENV["obtvse_password"] ? ENV["obtvse_password"] : "password" %>
-name:                Your name
-twitter:             your_twitter_handle
-github:              your_github_handle
-email:               address@example.com
+name:                Seongsik, Kim
+twitter:             kssminus
+github:              kssminus
+email:               kssminus@gmail.com
 google_analytics_id: YOUR_GA_ID
