--- a/config/config.yml
+++ b/config/config.yml
@@ -6,5 +6,6 @@ password:            <%= ENV["obtvse_password"] ? ENV["obtvse_password"] : "pass
 name:                Seongsik, Kim
 twitter:             kssminus
 github:              kssminus
-email:               kssminus@gmail.com
+#disqus:              YOUR_DISQUS_SHORTNAME #commenting out means using facebook comments box
+#email:               kssminus@gmail.com
 google_analytics_id: YOUR_GA_ID
