chatting temp commit

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,9 +19,7 @@ test:
   timeout: 5000
 
 production:
-    adapter:
-    encoding: utf8
-    database:
-    username:
-    password:
-    host: localhost
+  adapter: sqlite3
+  database: db/development.sqlite3
+  pool: 5
+  timeout: 5000
